trunk/Archive2/60/aec0560894e4ce/output
main.cpp:1:21: error: extra tokens at end of #include directive
 #include <iostream> gfhgfhgf
                     ^
