trunk/Archive2/60/aec0560894e4ce/main.cpp
#include <iostream> gfhgfhgf
using namespace std;

int main() {
    return 0;
}